--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "npx prisma generate"
+    "db:generate": "npx prisma generate",
+    "start-app": "npm run start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -22,6 +23,7 @@
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
